--- a/index.html
+++ b/index.html
@@ -3,34 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sheethal's Creative Space</title>
+    <title>My Magical Personal Webpage</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+        @import 
+url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
+            background-color: #1a1a1a;
+            color: #f5f5f5;
         }
         header {
-            background-color: #ff6f61;
-            color: white;
+            background-color: #2c3e50;
+            color: #f5f5f5;
             padding: 1em 0;
             text-align: center;
             font-family: 'Pacifico', cursive;
-            font-size: 2.5em;
+            font-size: 2em;
             text-shadow: 2px 2px 4px #000000;
         }
         nav {
             display: flex;
             justify-content: center;
-            background-color: #ff6f61;
+            background-color: #34495e;
         }
         nav a {
-            color: white;
+            color: #f5f5f5;
             padding: 14px 20px;
             text-decoration: none;
             text-align: center;
@@ -38,91 +38,138 @@
             font-size: 1.2em;
         }
         nav a:hover {
-            background-color: #ff8566;
+            background-color: #e74c3c;
             color: white;
         }
         section {
             padding: 20px;
-            text-align: center;
         }
         h2 {
             font-family: 'Pacifico', cursive;
-            font-size: 2em;
-            color: #ff6f61;
+            font-size: 1.8em;
+            color: #e74c3c;
         }
         p {
             font-size: 1.2em;
-            margin-bottom: 20px;
         }
         footer {
-            background-color: #ff6f61;
-            color: white;
+            background-color: #2c3e50;
+            color: #f5f5f5;
             text-align: center;
             padding: 10px 0;
             position: fixed;
             width: 100%;
             bottom: 0;
         }
-        .gallery img {
-            width: 300px;
-            height: auto;
-            margin: 10px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        .magic-icon {
+            width: 50px;
+            height: 50px;
+            margin-right: 10px;
+        }
+        .magic-icons {
+            text-align: center;
+            margin: 20px 0;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Sheethal's Creative Space</h1>
+        <h1>Welcome to My Magical Webpage</h1>
     </header>
     <nav>
         <a href="#about">About Me</a>
-        <a href="#sketches">Sketches</a>
-        <a href="#travel">Travel Photos</a>
-        <a href="#talent">Talent Acquisition</a>
+        <a href="#magic">Magic Tricks</a>
+        <a href="#software">Software Development</a>
+        <a href="#sports-travel">Sports & Travel</a>
         <a href="#contact">Contact</a>
     </nav>
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I'm Sheethal, a passionate artist, avid traveler, and talent acquisition specialist. Welcome to my personal space where I share my artwork, travel adventures, and professional insights.</p>
-    </section>
-    <section id="sketches">
-        <h2>Sketches</h2>
-        <p>Drawing is my way of expressing creativity and capturing the beauty of the world. Here are some of my favorite sketches:</p>
-        <div class="gallery">
-            <!-- Add your sketches here -->
-            <img src="path/to/your-sketch1.jpg" alt="Sketch 1">
-            <img src="path/to/your-sketch2.jpg" alt="Sketch 2">
-            <img src="path/to/your-sketch3.jpg" alt="Sketch 3">
-            <!-- Add more sketches as needed -->
+        <p>Hello! I am a passionate software developer who loves to 
+perform magic tricks, stay active with sports, and travel the world. 
+Welcome to my personal space on the web where I share my hobbies and 
+professional work.</p>
+        <div class="magic-icons">
+            <img 
+src="https://img.icons8.com/ios-filled/50/000000/magic-wand.png" 
+class="magic-icon" alt="Magic Wand">
+            <img 
+src="https://img.icons8.com/ios-filled/50/000000/magic.png" 
+class="magic-icon" alt="Magic Hat">
+            <img 
+src="https://img.icons8.com/ios-filled/50/000000/rabbit-in-hat.png" 
+class="magic-icon" alt="Rabbit in Hat">
         </div>
     </section>
-    <section id="travel">
-        <h2>Travel Photos</h2>
-        <p>I love to explore new places and experience different cultures. Here are some photos from my travels:</p>
-        <div class="gallery">
-            <!-- Add your travel photos here -->
-            <img src="path/to/your-travel1.jpg" alt="Travel Photo 1">
-            <img src="path/to/your-travel2.jpg" alt="Travel Photo 2">
-            <img src="path/to/your-travel3.jpg" alt="Travel Photo 3">
-            <!-- Add more travel photos as needed -->
+    <section id="magic">
+        <h2>Magic Tricks</h2>
+        <p>Magic has always fascinated me. Here, I share some of my 
+favorite magic tricks and performances. Stay tuned for tutorials and 
+tips!</p>
+        <div class="magic-icons">
+            <img 
+src="https://img.icons8.com/ios-filled/50/000000/magic-wand.png" 
+class="magic-icon" alt="Magic Wand">
+            <img 
+src="https://img.icons8.com/ios-filled/50/000000/magic.png" 
+class="magic-icon" alt="Magic Hat">
+            <img 
+src="https://img.icons8.com/ios-filled/50/000000/rabbit-in-hat.png" 
+class="magic-icon" alt="Rabbit in Hat">
         </div>
     </section>
-    <section id="talent">
-        <h2>Talent Acquisition</h2>
-        <p>In my professional life, I specialize in talent acquisition. I enjoy connecting with people and helping them find the right opportunities to grow their careers.</p>
+    <section id="software">
+        <h2>Software Development</h2>
+        <p>As a software developer, I enjoy creating innovative solutions 
+and working on exciting projects. Check out my portfolio to see some of 
+the work I’ve done.</p>
+        <div class="magic-icons">
+            <img 
+src="https://img.icons8.com/ios-filled/50/000000/magic-wand.png" 
+class="magic-icon" alt="Magic Wand">
+            <img 
+src="https://img.icons8.com/ios-filled/50/000000/magic.png" 
+class="magic-icon" alt="Magic Hat">
+            <img 
+src="https://img.icons8.com/ios-filled/50/000000/rabbit-in-hat.png" 
+class="magic-icon" alt="Rabbit in Hat">
+        </div>
+    </section>
+    <section id="sports-travel">
+        <h2>Sports & Travel</h2>
+        <p>Sports keep me active and energized, and traveling allows me to 
+explore new cultures and places. I love sharing my adventures and 
+experiences here.</p>
+        <div class="magic-icons">
+            <img 
+src="https://img.icons8.com/ios-filled/50/000000/magic-wand.png" 
+class="magic-icon" alt="Magic Wand">
+            <img 
+src="https://img.icons8.com/ios-filled/50/000000/magic.png" 
+class="magic-icon" alt="Magic Hat">
+            <img 
+src="https://img.icons8.com/ios-filled/50/000000/rabbit-in-hat.png" 
+class="magic-icon" alt="Rabbit in Hat">
+        </div>
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <p>Feel free to reach out to me via email or connect with me on Instagram:</p>
+        <p>Feel free to reach out to me via email or connect with me on 
+social media:</p>
         <ul>
-            <li>Email: <a href="mailto:your-email@example.com" style="color: #ff6f61;">your-email@example.com</a></li>
-            <li>Instagram: <a href="https://www.instagram.com/your-instagram-id" style="color: #ff6f61;">@your-instagram-id</a></li>
+            <li>Email: <a href="mailto:your-email@example.com" 
+style="color: #e74c3c;">your-email@example.com</a></li>
+            <li>LinkedIn: <a 
+href="https://www.linkedin.com/in/yourprofile" style="color: 
+#e74c3c;">LinkedIn Profile</a></li>
+            <li>Twitter: <a href="https://twitter.com/yourprofile" 
+style="color: #e74c3c;">@yourprofile</a></li>
+            <!-- Add more social links as needed -->
         </ul>
     </section>
     <footer>
-        <p>&copy; 2024 Sheethal's Creative Space. All rights reserved.</p>
+        <p>&copy; 2024 My Magical Webpage. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
